vlib/v/checker/tests/oversized_int_lit.vv
assert 18446744073709551616 > 0
assert -9223372036854775809 < 0
